<package>
  <name>dvrk_mesh_vf</name>
  <version>1.0.0</version>
  <description>
  project for dvrk mesh virtual fixture
  </description>
  <maintainer email="zli122@jhu.edu">Max Li</maintainer>
  <license>cisst</license>

  <build_depend>catkin</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>saw_intuitive_research_kit</build_depend>
  <build_depend>saw_constraint_controller</build_depend>
  <build_depend>saw_open_igt_link</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>saw_intuitive_research_kit</run_depend>
  <run_depend>saw_constraint_controller</run_depend>
  <run_depend>saw_open_igt_link</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
