<package>
  <name>us_ablation</name>
  <version>1.7.1</version>
  <description>
  project for us cutter vf dvrk
  </description>
  <maintainer email="zli122@jhu.edu">Max Li</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawIntuitiveResearchKit</url>

  <build_depend>saw_intuitive_research_kit</build_depend>

  <run_depend>saw_intuitive_research_kit</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
